default/objects/Lead/fields/A_large_fleet_of_vehicles__c.field-meta.xml
<CustomField>
    <fullName>A_large_fleet_of_vehicles__c</fullName>
    <label>A large fleet of vehicles</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>