default/objects/Lead/fields/Account_Home_Station__c.field-meta.xml
<CustomField>
    <fullName>Account_Home_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Home Station</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Retailer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Account Home Station)</relationshipLabel>
    <relationshipName>Home_Station</relationshipName>
    <type>Lookup</type>
</CustomField>