default/objects/Lead/fields/Account_ID_Euroschell__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_Euroschell__c</fullName>
    <label>Account-ID_Euroschell</label>
    <length>25</length>
    <type>Text</type>
</CustomField>