default/objects/Lead/fields/Active_owner__c.field-meta.xml
<CustomField>
    <fullName>Active_owner__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active owner</label>
    <type>Checkbox</type>
</CustomField>