default/objects/Lead/fields/Additional_Fueling_Methods_specific__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fueling_Methods_specific__c</fullName>
    <label>Additional Fueling Methods (specific)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Expense reimbursement</fullName>
            </value>
            <value>
                <fullName>Petty cash</fullName>
            </value>
            <value>
                <fullName>Comdata</fullName>
            </value>
            <value>
                <fullName>FleetOne</fullName>
            </value>
            <value>
                <fullName>Fuelman</fullName>
            </value>
            <value>
                <fullName>OTR Trucking</fullName>
            </value>
            <value>
                <fullName>Regional company</fullName>
            </value>
            <value>
                <fullName>Voyager</fullName>
            </value>
            <value>
                <fullName>WEX</fullName>
            </value>
            <value>
                <fullName>ARCO</fullName>
            </value>
            <value>
                <fullName>BP</fullName>
            </value>
            <value>
                <fullName>Chevron/Texaco</fullName>
            </value>
            <value>
                <fullName>Citgo</fullName>
            </value>
            <value>
                <fullName>Conoco/Phillips 66/76</fullName>
            </value>
            <value>
                <fullName>Exxon/Mobil</fullName>
            </value>
            <value>
                <fullName>Shell</fullName>
            </value>
            <value>
                <fullName>Local Mobile Refueler</fullName>
            </value>
            <value>
                <fullName>U.S. Fleet (Quick Fuel)</fullName>
            </value>
            <value>
                <fullName>Co-branded card</fullName>
            </value>
            <value>
                <fullName>Fully managed</fullName>
            </value>
            <value>
                <fullName>CFN (Commercial Fueling Network)</fullName>
            </value>
            <value>
                <fullName>Local Cardlocks</fullName>
            </value>
            <value>
                <fullName>Pacific Pride</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rosneft</fullName>
            </value>
            <value>
                <fullName>Licard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>