default/objects/Lead/fields/Address_Comments__c.field-meta.xml
<CustomField>
    <fullName>Address_Comments__c</fullName>
    <label>Address Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>