default/objects/Lead/fields/Address_Is_Verified_In_External_System__c.field-meta.xml
<CustomField>
    <fullName>Address_Is_Verified_In_External_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Is Verified In External System</label>
    <type>Checkbox</type>
</CustomField>