default/objects/Lead/fields/Adressbroker__c.field-meta.xml
<CustomField>
    <fullName>Adressbroker__c</fullName>
    <label>Adressbroker</label>
    <length>25</length>
    <type>Text</type>
</CustomField>