default/objects/Lead/fields/Adressbrokernumber__c.field-meta.xml
<CustomField>
    <fullName>Adressbrokernumber__c</fullName>
    <description>Внутренний номер поставщика</description>
    <label>Adressbrokernumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>