default/objects/Lead/fields/Age_company__c.field-meta.xml
<CustomField>
    <fullName>Age_company__c</fullName>
    <label>Age of company</label>
    <length>25</length>
    <type>Text</type>
</CustomField>