default/objects/Lead/fields/Agency_Nummer__c.field-meta.xml
<CustomField>
    <fullName>Agency_Nummer__c</fullName>
    <label>Agency Nummer</label>
    <length>15</length>
    <type>Text</type>
</CustomField>