default/objects/Lead/fields/Agree_email__c.field-meta.xml
<CustomField>
    <fullName>Agree_email__c</fullName>
    <formula>IF( Agree_to_receive_comm_info_by_email__c = TRUE, "Ano", "Ne")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agree_email</label>
    <type>Text</type>
</CustomField>