default/objects/Lead/fields/Agree_marketing__c.field-meta.xml
<CustomField>
    <fullName>Agree_marketing__c</fullName>
    <formula>IF( Agree_to_process_pers_data_for_marketing__c = TRUE, "Ano", "Ne")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agree_marketing</label>
    <type>Text</type>
</CustomField>