default/objects/Lead/fields/Agree_phone__c.field-meta.xml
<CustomField>
    <fullName>Agree_phone__c</fullName>
    <formula>IF( Agree_to_telephone_contact__c = TRUE, "Ano", "Ne")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agree_phone</label>
    <type>Text</type>
</CustomField>