default/objects/Lead/fields/Aktuelle_Bezahlmethode__c.field-meta.xml
<CustomField>
    <fullName>Aktuelle_Bezahlmethode__c</fullName>
    <label>Aktuelle Bezahlmethode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andere Kreditkarte - Visa</fullName>
            </value>
            <value>
                <fullName>Andere Kreditkarte - Master Card</fullName>
            </value>
            <value>
                <fullName>Andere Kreditkarte - American Express</fullName>
            </value>
            <value>
                <fullName>Andere Kreditkarte - Andere</fullName>
            </value>
            <value>
                <fullName>Bargeld</fullName>
            </value>
            <value>
                <fullName>EC-Karte</fullName>
            </value>
            <value>
                <fullName>Tankkarte</fullName>
            </value>
            <value>
                <fullName>Diverse Tankkarten</fullName>
            </value>
            <value>
                <fullName>Verschiedene Bezahlmethoden</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>