default/objects/Lead/fields/Aktuelle_Zahlungsmethode__c.field-meta.xml
<CustomField>
    <fullName>Aktuelle_Zahlungsmethode__c</fullName>
    <label>Aktuelle Zahlungsmethode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barzahlung</fullName>
            </value>
            <value>
                <fullName>Tankkarte</fullName>
            </value>
            <value>
                <fullName>Kreditkarte</fullName>
            </value>
            <value>
                <fullName>Bankkarte</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>