default/objects/Lead/fields/ALL_Cards_BB__c.field-meta.xml
<CustomField>
    <fullName>ALL_Cards_BB__c</fullName>
    <formula>Return_funnel_Opp__r.ALL_Cards__c</formula>
    <label>ALL Cards return to funnel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>