default/objects/Lead/fields/Angebotsdauer_in_Monate__c.field-meta.xml
<CustomField>
    <fullName>Angebotsdauer_in_Monate__c</fullName>
    <label>Angebotsdauer in Monate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>