default/objects/Lead/fields/Anzahl_der_Fahrzeuge__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_der_Fahrzeuge__c</fullName>
    <label>Anzahl der Fahrzeuge?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>