default/objects/Lead/fields/Anzahl_der_Karten_Euroshell__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_der_Karten_Euroshell__c</fullName>
    <label>Anzahl der Karten_Euroshell</label>
    <length>4</length>
    <type>Text</type>
</CustomField>