default/objects/Lead/fields/Anzahl_LKW__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_LKW__c</fullName>
    <inlineHelpText>.</inlineHelpText>
    <label>Anzahl LKW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>