default/objects/Lead/fields/Anzahl_Mitarbeiter__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_Mitarbeiter__c</fullName>
    <label>Anzahl Mitarbeiter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>