default/objects/Lead/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <externalId>true</externalId>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>