default/objects/Lead/fields/Area_Traveled__c.field-meta.xml
<CustomField>
    <fullName>Area_Traveled__c</fullName>
    <description>Where does your fleet travel?</description>
    <inlineHelpText>Where does your fleet travel?</inlineHelpText>
    <label>Area Traveled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Statewide</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>