default/objects/Lead/fields/Available_for_reassignment__c.field-meta.xml
<CustomField>
    <fullName>Available_for_reassignment__c</fullName>
    <description>used by Distribution Engine</description>
    <formula>AND(IsConverted == FALSE ,  ISNULL(First_Call__c) , RecordType.Name != 'CCS Sales process' ,
OR(Recycle_counter__c == 0, ISNULL(Recycle_counter__c)) , !ISPICKVAL(Quali_Status__c,'Switched to E2E') , !ISPICKVAL(LeadSource,'Online_chat'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available for reassignment</label>
    <type>Checkbox</type>
</CustomField>