default/objects/Lead/fields/AZS_with_Discount_1__c.field-meta.xml
<CustomField>
    <fullName>AZS_with_Discount_1__c</fullName>
    <label>AZS_with_Discount_1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>