default/objects/Lead/fields/BB_Owner_Lead_Opportunity_return__c.field-meta.xml
<CustomField>
    <fullName>BB_Owner_Lead_Opportunity_return__c</fullName>
    <formula>IF((Return_funnel_Opp__r.Owner.FirstName  &amp;" " &amp; Return_funnel_Opp__r.Owner.LastName)=" ",
  Return_funnel_Lead__r.Owner:User.FirstName &amp;" " &amp; Return_funnel_Lead__r.Owner:User.LastName ,
 Return_funnel_Opp__r.Owner.FirstName  &amp;" " &amp; Return_funnel_Opp__r.Owner.LastName)

/*IF( Return_funnel_Opp__r.Owner.Username ='',
 Return_funnel_Lead__r.Owner:User.Username ,
Return_funnel_Opp__r.Owner.Username )*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Lead Opportunity return to funnel</label>
    <type>Text</type>
</CustomField>