default/objects/Lead/fields/Beschaeftigte__c.field-meta.xml
<CustomField>
    <fullName>Beschaeftigte__c</fullName>
    <label>Beschäftigte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-4</fullName>
            </value>
            <value>
                <fullName>5-9</fullName>
            </value>
            <value>
                <fullName>10-19</fullName>
            </value>
            <value>
                <fullName>20-49</fullName>
            </value>
            <value>
                <fullName>50-74</fullName>
            </value>
            <value>
                <fullName>75-99</fullName>
            </value>
            <value>
                <fullName>100-149</fullName>
            </value>
            <value>
                <fullName>150-199</fullName>
            </value>
            <value>
                <fullName>&gt;200</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>1-9</fullName>
                <isActive>false</isActive>
                <label>1-9</label>
            </value>
            <value>
                <fullName>1.000-1.999</fullName>
                <isActive>false</isActive>
                <label>1.000-1.999</label>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10</label>
            </value>
            <value>
                <fullName>10 - 19</fullName>
                <isActive>false</isActive>
                <label>10 - 19</label>
            </value>
            <value>
                <fullName>10-19 Beschäftigte</fullName>
                <isActive>false</isActive>
                <label>10-19 Beschäftigte</label>
            </value>
            <value>
                <fullName>100</fullName>
                <isActive>false</isActive>
                <label>100</label>
            </value>
            <value>
                <fullName>100 - 199</fullName>
                <isActive>false</isActive>
                <label>100 - 199</label>
            </value>
            <value>
                <fullName>100-199</fullName>
                <isActive>false</isActive>
                <label>100-199</label>
            </value>
            <value>
                <fullName>100-499</fullName>
                <isActive>false</isActive>
                <label>100-499</label>
            </value>
            <value>
                <fullName>1000</fullName>
                <isActive>false</isActive>
                <label>1000</label>
            </value>
            <value>
                <fullName>101</fullName>
                <isActive>false</isActive>
                <label>101</label>
            </value>
            <value>
                <fullName>101-150</fullName>
                <isActive>false</isActive>
                <label>101-150</label>
            </value>
            <value>
                <fullName>102</fullName>
                <isActive>false</isActive>
                <label>102</label>
            </value>
            <value>
                <fullName>1026</fullName>
                <isActive>false</isActive>
                <label>1026</label>
            </value>
            <value>
                <fullName>1027</fullName>
                <isActive>false</isActive>
                <label>1027</label>
            </value>
            <value>
                <fullName>103</fullName>
                <isActive>false</isActive>
                <label>103</label>
            </value>
            <value>
                <fullName>104</fullName>
                <isActive>false</isActive>
                <label>104</label>
            </value>
            <value>
                <fullName>105</fullName>
                <isActive>false</isActive>
                <label>105</label>
            </value>
            <value>
                <fullName>106</fullName>
                <isActive>false</isActive>
                <label>106</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>