default/objects/Lead/fields/BESCHKL__c.field-meta.xml
<CustomField>
    <fullName>BESCHKL__c</fullName>
    <label>BESCHKL</label>
    <length>5</length>
    <type>Text</type>
</CustomField>