default/objects/Lead/fields/Bestehen_Unternehmen__c.field-meta.xml
<CustomField>
    <fullName>Bestehen_Unternehmen__c</fullName>
    <label>Bestehen Unternehmen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 6 Monate</fullName>
            </value>
            <value>
                <fullName>6 - 12 Monate</fullName>
            </value>
            <value>
                <fullName>12 - 18 Monate</fullName>
            </value>
            <value>
                <fullName>18 Monate - 2 Jahre</fullName>
            </value>
            <value>
                <fullName>2 - 3 Jahre</fullName>
            </value>
            <value>
                <fullName>3 - 4 Jahre</fullName>
            </value>
            <value>
                <fullName>4 - 5 Jahre</fullName>
            </value>
            <value>
                <fullName>5 Jahre und länger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>