default/objects/Lead/fields/Blocked_Cards__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Cards__c</fullName>
    <description>Number of Blocked Cards</description>
    <label>Blocked Cards</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>