default/objects/Lead/fields/BR_check_result__c.field-meta.xml
<CustomField>
    <fullName>BR_check_result__c</fullName>
    <label>BR_check_result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not checked</fullName>
                <default>true</default>
                <label>Not checked</label>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>