default/objects/Lead/fields/Branchencode__c.field-meta.xml
<CustomField>
    <fullName>Branchencode__c</fullName>
    <label>Branchencode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>