default/objects/Lead/fields/browser__c.field-meta.xml
<CustomField>
    <fullName>browser__c</fullName>
    <description>track customer</description>
    <label>browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>