default/objects/Lead/fields/Call_time__c.field-meta.xml
<CustomField>
    <fullName>Call_time__c</fullName>
    <label>Call time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>