default/objects/Lead/fields/Call_via_3CX_Fax__c.field-meta.xml
<CustomField>
    <fullName>Call_via_3CX_Fax__c</fullName>
    <description>Call lead's fax via 3CX</description>
    <formula>HYPERLINK("http://localhost:47280/SalesforceAPI.aspx?UserAccount="&amp; $User.Username &amp;"&amp;Destination="&amp;Fax&amp;"&amp;LeadId="&amp;Id,"Click here to call this lead with 3CX (Fax)")</formula>
    <inlineHelpText>Clicking this link will launch a call to this lead's fax and connect it to your phone</inlineHelpText>
    <label>Call fax via 3CX</label>
    <type>Text</type>
</CustomField>