default/objects/Lead/fields/Cancelation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Date__c</fullName>
    <description>Date of the Customers Cancelation</description>
    <label>Cancelation Date</label>
    <type>Date</type>
</CustomField>