default/objects/Lead/fields/CCS_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CCS_Account_Record_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Account Record Type</label>
    <type>Text</type>
</CustomField>