default/objects/Lead/fields/CCS_agric_constr_mach_over_3_5t__c.field-meta.xml
<CustomField>
    <fullName>CCS_agric_constr_mach_over_3_5t__c</fullName>
    <label>CCS agric./constr.mach. over 3,5t</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>