default/objects/Lead/fields/CCS_buses__c.field-meta.xml
<CustomField>
    <fullName>CCS_buses__c</fullName>
    <label>CCS buses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>