default/objects/Lead/fields/CCS_Call_status__c.field-meta.xml
<CustomField>
    <fullName>CCS_Call_status__c</fullName>
    <label>CCS Call status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>dovoláno</fullName>
            </value>
            <value>
                <fullName>číslo neexistuje</fullName>
            </value>
            <value>
                <fullName>nezvedá, obsazeno</fullName>
            </value>
            <value>
                <fullName>záznamník, fax</fullName>
            </value>
            <value>
                <fullName>zavolat jindy, nemá čas</fullName>
            </value>
            <value>
                <fullName>domluveno následné volání</fullName>
            </value>
            <value>
                <fullName>nevoláno</fullName>
            </value>
            <value>
                <fullName>odmítnutý hovor - monitoring</fullName>
            </value>
            <value>
                <fullName>omyl</fullName>
            </value>
            <value>
                <fullName>odmítnutý hovor</fullName>
            </value>
            <value>
                <fullName>definitivně nezastižen</fullName>
            </value>
            <value>
                <fullName>nevoláno - ve volání jinde</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>