default/objects/Lead/fields/CCS_Cars_up_to_3_5t__c.field-meta.xml
<CustomField>
    <fullName>CCS_Cars_up_to_3_5t__c</fullName>
    <label>CCS Cars up to 3,5t</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>