default/objects/Lead/fields/CCS_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>CCS_Close_Date__c</fullName>
    <label>CCS Close Date</label>
    <type>Date</type>
</CustomField>