default/objects/Lead/fields/CCS_Close_reason__c.field-meta.xml
<CustomField>
    <fullName>CCS_Close_reason__c</fullName>
    <label>CCS Close reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Info k BONUS</fullName>
            </value>
            <value>
                <fullName>Zájemce o Carnet</fullName>
            </value>
            <value>
                <fullName>Předáno na Market</fullName>
            </value>
            <value>
                <fullName>Smlouva uzavřena</fullName>
            </value>
            <value>
                <fullName>Smlouva uzavřena LIMIT+MINI</fullName>
            </value>
            <value>
                <fullName>Telefonická objednávka</fullName>
            </value>
            <value>
                <fullName>Telefonická objednávka CCS LIMIT FIX 97</fullName>
            </value>
            <value>
                <fullName>Telefonická objednávka CCS LIMIT ESO 2015</fullName>
            </value>
            <value>
                <fullName>Nabídka CCS LIMIT+</fullName>
            </value>
            <value>
                <fullName>Nabídka CCS LIMIT Moje síť</fullName>
            </value>
            <value>
                <fullName>Nabídka CCS LIMIT FIX 97</fullName>
            </value>
            <value>
                <fullName>Nabídka CCS LIMIT ESO 2015</fullName>
            </value>
            <value>
                <fullName>Nezájem - klient se pouze dívá</fullName>
            </value>
            <value>
                <fullName>Nezájem - nabídka odmítnuta (viz poznámka)</fullName>
            </value>
            <value>
                <fullName>Objednávku klient odešle později</fullName>
            </value>
            <value>
                <fullName>Schůzka na OZ</fullName>
            </value>
            <value>
                <fullName>Zájemce UTA</fullName>
            </value>
            <value>
                <fullName>Kontakty neexistují</fullName>
            </value>
            <value>
                <fullName>Nezadáno – nesouhlasí se změněnými podmínkami</fullName>
            </value>
            <value>
                <fullName>Nezadáno – Cribis H</fullName>
            </value>
            <value>
                <fullName>Přiobjednávka</fullName>
            </value>
            <value>
                <fullName>Předáno zodpovědné osobě</fullName>
            </value>
            <value>
                <fullName>Jiný v poznámce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>