default/objects/Lead/fields/CCS_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>CCS_Company_ID__c</fullName>
    <description>IČo</description>
    <inlineHelpText>IČo</inlineHelpText>
    <label>CCS Company ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>