default/objects/Lead/fields/CCS_competition_2__c.field-meta.xml
<CustomField>
    <fullName>CCS_competition_2__c</fullName>
    <description>Temporary duplicate field to CCS_competition with slightly different values.</description>
    <label>Konkurence</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCS_Reason_of_lack_of_interest__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Benzina</fullName>
            </value>
            <value>
                <fullName>Shell</fullName>
            </value>
            <value>
                <fullName>OMV</fullName>
            </value>
            <value>
                <fullName>MOL</fullName>
            </value>
            <value>
                <fullName>RobinOil</fullName>
            </value>
            <value>
                <fullName>TankOno</fullName>
            </value>
            <value>
                <fullName>hotovost</fullName>
            </value>
            <value>
                <fullName>bankovní karta</fullName>
            </value>
            <value>
                <fullName>vlastní ČS</fullName>
            </value>
            <value>
                <fullName>jiné</fullName>
            </value>
            <value>
                <fullName>nesdělil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>